Bug #239226 --> Opening Forward Message Attachment Opens parent message in a new window instead of the forwarded attachment. regression from the string defragmentation changes. We were changing the underlying url spec out from underneath us.

r=darin
sr=bienvenu
a=chofmann